# USA_Accidents_ML

./: .gitignore  README.md  pyproject.toml
notebooks/: data book
src/data/: DataCleansing.py  DataPreparation.py  EDA.py  load_data.py
src/features/: Feature.py  FeaturePreCheck.py  FeatureSelection.py  FeatureSelectionStage2Export.py
src/models/: ModelExplainability.py  ModelSelection.py  ModelSelection_HPO.py
