[tool.poetry]
name = "usa-accidents-ml"
version = "0.1.0"
description = ""
authors = ["LEAGURARIE <LEA.GURARIE@GMAIL.COM>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# --- Core scientific stack (NumPy 2.x compatible) ---
numpy = ">=2.0,<2.4"
pandas = ">=2.2,<2.4"
scipy = ">=1.11,<1.14"
scikit-learn = ">=1.3,<1.6"
joblib = ">=1.3,<2.0"
threadpoolctl = ">=3.1,<4.0"
matplotlib = ">=3.8,<3.11"

xgboost = ">=2.0,<4.0"

seaborn = "0.13.*"
tqdm = ">=4.66,<5.0"
requests = ">=2.32,<3.0"
xlsxwriter = ">=3.2,<4.0"
missingno = "0.5.*"
textblob = "0.19.*"
nltk = "3.9.*"

# EDA tools
sweetviz = ">=2.3.1,<3.0"

# Optional goodies
blobber = "^1.0"
wordlist = "^1.0.1"

# Geo stack:
shapely = {version = ">=2.0,<3.0", optional = true}
pyproj  = {version = ">=3.5,<4.0", optional = true}
fiona   = {version = ">=1.9,<2.0", optional = true}
geopandas = {version = ">=0.14,<1.0", optional = true}
shap = "^0.49.1"
openpyxl = "^3.1.5"

[tool.poetry.extras]
geo = ["shapely", "pyproj", "fiona", "geopandas"]

[tool.poetry.group.dev.dependencies]
pandas-stubs = "2.2.2.240909"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
